--- a/two.html
+++ b/two.html
@@ -13,6 +13,7 @@
             <h1>Дневник начинающего</h1>
             <h1>программиста</h1>
             </div>
+            <div></div>
 
 <div class="tab">
   <button class="tablinks" onclick="openPage(event, 'Главная')" id="defaultOpen">Главная</button>
